[gd_scene load_steps=2 format=2]

[ext_resource path="res://SystemMenu.gd" type="Script" id=1]

[node name="SystemMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 424.0
margin_top = 155.0
margin_right = 600.0
margin_bottom = 391.0
color = Color( 0.113725, 0.113725, 0.113725, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReferenceRect" type="ReferenceRect" parent="ColorRect"]
margin_right = 176.0
margin_bottom = 236.0
border_color = Color( 0.568627, 0.568627, 0.568627, 1 )
editor_only = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Save" type="Button" parent="ColorRect/ReferenceRect"]
margin_left = 28.0
margin_top = 20.0
margin_right = 148.0
margin_bottom = 60.0
focus_mode = 0
mouse_default_cursor_shape = 2
enabled_focus_mode = 0
text = "Save Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Load" type="Button" parent="ColorRect/ReferenceRect"]
margin_left = 28.0
margin_top = 72.0
margin_right = 148.0
margin_bottom = 112.0
focus_mode = 0
mouse_default_cursor_shape = 2
enabled_focus_mode = 0
text = "Load Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="ColorRect/ReferenceRect"]
margin_left = 28.0
margin_top = 124.0
margin_right = 148.0
margin_bottom = 164.0
focus_mode = 0
mouse_default_cursor_shape = 2
enabled_focus_mode = 0
text = "Quit Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Close" type="Button" parent="ColorRect/ReferenceRect"]
margin_left = 28.0
margin_top = 176.0
margin_right = 148.0
margin_bottom = 216.0
focus_mode = 0
mouse_default_cursor_shape = 2
enabled_focus_mode = 0
text = "Close Menu"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="ColorRect/ReferenceRect/Save" to="." method="_on_Save_pressed"]
[connection signal="pressed" from="ColorRect/ReferenceRect/Load" to="." method="_on_Load_pressed"]
[connection signal="pressed" from="ColorRect/ReferenceRect/Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="ColorRect/ReferenceRect/Close" to="." method="_on_Close_pressed"]
